--- a/client/public/index.html
+++ b/client/public/index.html
@@ -32,7 +32,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     
-    <title>React App</title>
+    <title>FURNITURE</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -55,22 +55,6 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <script>
-       $('.owl-carousel').owlCarousel({
-    loop:true,
-    margin:10,
-    nav:true,
-    responsive:{
-        0:{
-            items:1
-        },
-        600:{
-            items:3
-        },
-        1000:{
-            items:5
-        }
-    }
-})
     </script>
   </body>
 </html>
